[package]
name = "kdurs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
cxx = { version = "1", features = ["c++20"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "io-std",
    "io-util",
    "fs",
] }
tracing = { version = "0.1" }

[profile.dev]
opt-level = 1

[profile.dist]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[dev-dependencies]
tracing-subscriber = "0.3"

[build-dependencies]
cxx-build = { version = "1", features = ["parallel"] }
rustflags = { version = "0.1" }
