[package]
name = "kaduceus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
cxx = { version = "1", features = ["c++20"] }
image = "0.25.5"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "io-std",
    "io-util",
    "fs",
] }
tracing = { version = "0.1" }

[profile.dev]
opt-level = 1

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dev-dependencies]
tracing-subscriber = { version = "0.3" }
insta = { version = "1.38.0", features = ["ron"] }

[build-dependencies]
cxx-build = { version = "1", features = ["parallel"] }
rustflags = { version = "0.1" }
glob = { version = "0.3" }
